# youtube-comment-analysis-aws

./: .gitignore  README.md  locals.tf  main.tf  variables.tf  variables.tfvars
01_lambda_data/src/: lambda_function.py
02_lambda_transform/: pyproject.toml
02_lambda_transform/src/: lambda_function.py
03_lambda_format/src/: lambda_function.py
04_lambda_analyze/: pyproject.toml
04_lambda_analyze/src/: lambda_function.py
05_lambda_report/: pyproject.toml
05_lambda_report/src/: charts.py  lambda_function.py  pdf.py
05_lambda_report/src/sections/: general.py  sentiment.py  word_frequencies.py
lambda_data/: pyproject.toml
lambda_function/: pyproject.toml
lambda_function/src/: lambda_function.py
lambda_report/: Dockerfile  pyproject.toml
lambda_report/src/: charts.py  lambda_function.py  report.py
modules/api_gateway/: api.yml  main.tf  policies.tf  variables.tf
modules/glue_catalog/: main.tf  variables.tf
modules/lambda_analyze/: main.tf  policies.tf  variables.tf
modules/lambda_data/: main.tf  outputs.tf  variables.tf
modules/lambda_format/: main.tf  policies.tf  variables.tf
modules/lambda_function/: main.tf  policies.tf
modules/lambda_report/: main.tf  outputs.tf  variables.tf
modules/lambda_transform/: main.tf  policies.tf  variables.tf
modules/s3_bucket/: main.tf  outputs.tf  variables.tf
modules/state_machine/: main.tf  policies.tf  variables.tf
