[tool.poetry]
name = "temp"
version = "0.1.0"
description = ""
authors = ["pirocheto <pirocheto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
boto3 = "^1.34.58"
spacy = "^3.7.4"
fr-core-news-md = {url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.7.0/fr_core_news_md-3.7.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
